[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/9Z_2102.w026.n002.116B.p1.116.jpg" type="Texture" id=1]
[ext_resource path="res://assets/AngleScroll.png" type="Texture" id=2]
[ext_resource path="res://assets/ReloadScroll.png" type="Texture" id=3]
[ext_resource path="res://assets/DamageScroll.png" type="Texture" id=4]
[ext_resource path="res://assets/HealthScroll.png" type="Texture" id=5]
[ext_resource path="res://level/Shop.gd" type="Script" id=6]

[node name="Control" type="Control"]
margin_right = 1600.0
margin_bottom = 900.0
rect_clip_content = true
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -432.0
margin_top = -132.0
margin_right = 5568.0
margin_bottom = 2868.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Reload Button" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 86.0
margin_right = 928.0
margin_bottom = 713.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )

[node name="Angle Button" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 450.0
margin_right = 928.0
margin_bottom = 1077.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )

[node name="Damage Button" type="TextureButton" parent="."]
margin_left = 952.0
margin_top = 450.0
margin_right = 1560.0
margin_bottom = 1077.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[node name="Health Button" type="TextureButton" parent="."]
margin_left = 952.0
margin_top = 86.0
margin_right = 1560.0
margin_bottom = 713.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )

[connection signal="pressed" from="Reload Button" to="." method="_on_Reload_Button_pressed"]
[connection signal="pressed" from="Angle Button" to="." method="_on_Angle_Button_pressed"]
[connection signal="pressed" from="Damage Button" to="." method="_on_Damage_Button_pressed"]
[connection signal="pressed" from="Health Button" to="." method="_on_Health_Button_pressed"]
